// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card when \`text\` prop is defined renders with Text content 1`] = `
<li
  className="card"
>
  <img
    alt=""
    aria-hidden="true"
    className="card__image"
    height="580"
    loading="lazy"
    src="imageUrl-mock"
    width="350"
  />
  <dl>
    <dt
      className="card__term"
    >
      Name
    </dt>
    <dd
      className="card__description"
    >
      name-mock
    </dd>
    <dt
      className="card__term"
    >
      Text
    </dt>
    <dd
      className="card__description"
    >
      text-mock
    </dd>
    <dt
      className="card__term"
    >
      Set Name
    </dt>
    <dd
      className="card__description"
    >
      set-mock
    </dd>
    <dt
      className="card__term"
    >
      Type
    </dt>
    <dd
      className="card__description"
    >
      type-mock
    </dd>
  </dl>
</li>
`;

exports[`Card when \`text\` prop is not defined renders without Text content 1`] = `
<li
  className="card"
>
  <img
    alt=""
    aria-hidden="true"
    className="card__image"
    height="580"
    loading="lazy"
    src="imageUrl-mock"
    width="350"
  />
  <dl>
    <dt
      className="card__term"
    >
      Name
    </dt>
    <dd
      className="card__description"
    >
      name-mock
    </dd>
    <dt
      className="card__term"
    >
      Set Name
    </dt>
    <dd
      className="card__description"
    >
      set-mock
    </dd>
    <dt
      className="card__term"
    >
      Type
    </dt>
    <dd
      className="card__description"
    >
      type-mock
    </dd>
  </dl>
</li>
`;
